Initial foray into new ui forms.  Added a form widget, checkboxes and text fields.  Somewhat uncertain how to pass through options to avoid clashes with Kendo, for now I'm wrapping our options in a structure field of the outer options.  Don't plan to use the MVVM binding at this stage, instead opting for own own binding logic.

--- a/com.zutubi.pulse.master/src/www/css/admina.css
+++ b/com.zutubi.pulse.master/src/www/css/admina.css
@@ -25,6 +25,10 @@ body {
     overflow: auto;
 }
 
+#outer-split {
+    border-width: 0;
+}
+
 #footer {
     position: fixed;
     bottom: 0;
@@ -32,6 +36,11 @@ body {
     right: 0;
     height: 20px;
     background-color: #abcdef;
+}
+
+.pane-content {
+    width: 100%;
+    height: 100%;
 }
 
 table.form {
